--- a/exercicios/ex25/tabela.html
+++ b/exercicios/ex25/tabela.html
@@ -28,6 +28,7 @@
     </style>
 </head>
 <body>
+    <!--TABELAS SIMPLES-->
     <h1>Minha primeira tabela</h1>
     <table>
         <tr> <!--primeira linha-->
