--- a/desafios/desafio014/desafio014.html
+++ b/desafios/desafio014/desafio014.html
@@ -29,19 +29,20 @@
             background-color: rgb(110, 110, 110);
             color: white;
         }
+        
     </style>
 </head>
 <body>
     <table>
         <thead>
-            <th>Área</th>
-            <th>Disciplinas</th>
-            <th colspan="2">Notas</th>
+            <th scope="col">Área</th>
+            <th scope="col">Disciplinas</th>
+            <th scope="colgroup" colspan="2" >Notas</th>
             <th>Média</th>
         </thead>
         <tbody>
             <tr>
-                <th rowspan="4">Exatas</th>
+                <th scope="rowgroup" rowspan="4" >Exatas</th>
                 <td class="titulo" >Matemática</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -66,11 +67,11 @@
                 <td>0.0</td>
             </tr>
             <tr class="linha">
-                <th class="titulo" colspan="4">Média de Exatas</th>
+                <th class="titulo" scope="row"colspan="4" >Média de Exatas</th>
                 <td>0.0</td>
             </tr>
             <tr>
-                <th rowspan="2">Humanas</th>
+                <th scope="rowgroup" rowspan="2" >Humanas</th>
                 <td class="titulo" >Matemática</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -83,7 +84,7 @@
                 <td>0.0</td>
             </tr>
             <tr class="linha">
-                <th class="titulo" colspan="4">Média de Humanas</th>
+                <th class="titulo" colspan="4" scope="row">Média de Humanas</th>
                 <td>0.0</td>
             </tr>
         </tbody>
